# DocuMind

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
demo/: sample_report.md
jobs/: embed_batch.slurm  vllm_server.slurm
scripts/: benchmark.py  load_demo_data.py  smoke_test.py
src/agents/: analyst.py  crew.py  critic.py  researcher.py  tools.py  writer.py
src/api/: main.py  websocket.py
src/api/routes/: ingest.py  research.py  sessions.py
src/core/: logging.py
src/db/: connection.py  models.py
src/db/migrations/: 001_initial.sql
src/embeddings/: bigred200_client.py  embedding_service.py
src/ingest/: chunker.py  document_loader.py  pipeline.py
src/mcp_server/: server.py  tools.py
src/rag/: rag_chain.py  reranker.py  retriever.py
src/ui/: app.py
src/workflow/: checkpointer.py  graph.py  nodes.py  state.py
tests/: test_agents.py  test_rag.py  test_workflow.py
